--- a/.env.dist
+++ b/.env.dist
@@ -1,9 +1,11 @@
 PORT=3000
-DB_MIGRATE_CMD=ts-node
-DB_MIGRATE_DIR=./migrations
+NODE_ENV=prod
 
 DB_HOST=db
 DB_PORT=5432
 DB_NAME=mydb
 DB_USER=admin
 DB_PASSWORD=admin
+
+REDIS_HOST=cache
+REDIS_PORT=6379
