--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  app:
+  api:
     build:
       context: .
       dockerfile: Dockerfile
@@ -9,6 +9,7 @@ services:
       - '${DB_PORT}:${DB_PORT}'
     depends_on:
       - db
+      - cache
     environment:
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
@@ -34,6 +35,15 @@ services:
       - postgres-data:/var/lib/postgresql/data
     networks:
       - app-network
+  
+  cache:
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning
+    volumes: 
+      - redis-data:/data
 
 networks:
   app-network:
@@ -41,3 +51,4 @@ networks:
 
 volumes:
   postgres-data:
+  redis-data:
