--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-ts",
+  "name": "express-ts-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,25 +10,47 @@
     "lint": "eslint 'src/**/*.{ts,js}'",
     "lint:fix": "eslint 'src/**/*.{ts,js}' --fix",
     "seed": "ts-node src/seed.ts",
-    "migrate": "ts-node src/migrate.ts"
+    "migrate": "ts-node src/migrate.ts",
+    "migrate:down": "ts-node src/migrate.ts --down"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "express",
+    "TS",
+    "routing-controller",
+    "postgres.js"
+  ],
+  "author": "Arshavir Gharibyan <arshavir.dev@gmail.com>",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "class-validator-jsonschema": "^5.0.1",
+    "connect-redis": "^7.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "inversify": "^6.0.3",
+    "express-session": "^1.18.1",
     "postgres": "^3.4.5",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
+    "routing-controllers": "^0.10.4",
+    "routing-controllers-openapi": "^4.0.0",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "winston": "^3.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.0",
     "@types/node": "^22.8.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "@typescript-eslint/parser": "^8.12.2",
     "eslint": "^9.13.0",
