--- a/.env.dist
+++ b/.env.dist
@@ -1,11 +1,13 @@
 PORT=3000
-NODE_ENV=prod
+NODE_ENV=production
 
-DB_HOST=db
+DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=mydb
 DB_USER=admin
 DB_PASSWORD=admin
 
-REDIS_HOST=cache
+REDIS_HOST=redis
 REDIS_PORT=6379
+
+SESSION_SECRET=keyboardcat
