--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,14 @@
-DB_HOST=0.0.0.0
+PORT=3000
+NODE_ENV=test
+
+DB_HOST=postgres
 DB_PORT=5432
 DB_USER=testing
 DB_PASSWORD=test
 DB_NAME=test_db
+
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+SESSION_SECRET=keyboardcat
