--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
     "dev": "tsc-watch --target es2017 --outDir ./dist --onSuccess \"node ./dist/server.js\"",
     "lint": "eslint 'src/**/*.{ts,js}'",
     "lint:fix": "eslint 'src/**/*.{ts,js}' --fix",
-    "test": "LOG_LEVEL=error jest",
-    "seed": "node dist/seed.js",
-    "migrate": "node dist/migrate.js",
-    "migrate:down": "node dist/migrate.js --down",
+    "test": "LOG_LEVEL=error jest --detectOpenHandles",
+    "seed": "ts-node src/seed.ts",
+    "migrate": "ts-node src/migrate.ts",
+    "migrate:down": "ts-node src/migrate.ts --down",
     "worker": "node dist/worker.js"
   },
   "keywords": [
     "express",
     "TS",
+    "typedi",
     "routing-controller",
     "postgres.js"
   ],
   "author": "Arshavir Gharibyan <arshavir.dev@gmail.com>",
   "license": "ISC",
-  "description": "",
+  "description": "Express rest api server",
   "dependencies": {
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -63,6 +64,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.11.0",
     "jest": "^29.7.0",
+    "jest-mock": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-watch": "^1.0.8",
